task1/hardened/demo-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: secops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      serviceAccountName: demo-api
      containers:
        - name: demo-api
          image: secops-demo-api:phase-d1
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: api-tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
      volumes:
        - name: api-tmp
          emptyDir: {}
